--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+    "format": "prettier --check ."
   },
   "dependencies": {
     "@types/node": "18.15.0",
@@ -18,5 +19,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@strv/prettier-config": "^2.0.0",
+    "prettier": "^2.8.4"
   }
 }
