--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --check ."
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.5.6",
+    "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.10.0",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
