--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "devDependencies": {
     "@strv/prettier-config": "^2.0.0",
-    "prettier": "^2.8.4"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "tailwindcss": "^3.2.7"
   }
 }
